Fixed Dribbble shots invisible error

--- a/assets/styles/combined.css
+++ b/assets/styles/combined.css
@@ -1039,6 +1039,9 @@ figure img, img {
     figure img {
         max-width: 700px;
     }
+    #shotsByPlayerId li img {
+        opacity: 1;
+    }
     .fullWidth {
         width: 100%;
     }
